# pgdb

./: .gitignore  README.md  env  pgpass  pyproject.toml
data/: db.sql  undo.sql
dvds/: db_pg8000.py  db_postgresql.py  db_psycopg.py  main.py
pgdb/: __init__.py  db_pg8000.py  db_postgresql.py  db_psycopg.py  main.py  orm.py
tools/: include.sh  mkdb  mksql  setup
