[tool.poetry]
name = "pgdb"
version = "0.1.0"
description = ""
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.1"
py-postgresql = "^1.2.2"
pg8000 = "^1.22.0"
SQLAlchemy = "^1.4.25"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^7.28.0"
pylama = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
